salesforce_sfdx/main/default/objects/OSFMX_GasConsumption__c/OSFMX_GasConsumption__c.object-meta.xml
<CustomObject>
    <label>Consumo Gas</label>
    <nameField>
        <label>Consumo de Gas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumos Gas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>