salesforce_sfdx/main/default/objects/OSFMX_GasConsumption__c/fields/OSFMX_Account__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Account__c</fullName>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consumos Gas</relationshipLabel>
    <relationshipName>ConsumosGas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>