salesforce_sfdx/main/default/objects/OSFMX_GasConsumption__c/fields/OSFMX_AnnualGasConsumptionGjbyyear__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AnnualGasConsumptionGjbyyear__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Consumo anual de gas natural (Gj/año)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>