salesforce_sfdx/main/default/objects/OSFMX_GasConsumption__c/fields/OSFMX_DistributionArea__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DistributionArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zona de distribución</label>
    <referenceTo>OSFMX_DistributionArea__c</referenceTo>
    <relationshipLabel>Consumos Gas</relationshipLabel>
    <relationshipName>Consumos_Gas</relationshipName>
    <type>Lookup</type>
</CustomField>