salesforce_sfdx/main/default/objects/OSFMX_GasConsumption__c/fields/OSFMX_Qmaxm3byh__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Qmaxm3byh__c</fullName>
    <label>Qmax(m3/h)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>