salesforce_sfdx/main/default/objects/OSFMX_GasConsumption__c/fields/OSFMX_SupplyPressure__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SupplyPressure__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Presión de suministro(bar)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>